--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -58,7 +58,13 @@ CC-00
                                         maxlength=64 value="">
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="paymentMethod[typeOf]" class="bmd-label-static">
+                                        決済方法
+                                    </label>
+                                    <select class="form-control" name="paymentMethod[typeOf]" id="paymentMethod[typeOf]"
+                                        style="width: 100%;">
+                                    </select>
                                 </div>
                             </div>
                         </form>
