--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -54,9 +54,10 @@ Aa-4
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
-                                    <label class="bmd-label-static">ルーム</label>
-                                    <select class="form-control" name="screen">
-                                        <option value="">施設を選択してください</option>
+                                    <label for="screen" class="bmd-label-static">
+                                        ルーム
+                                    </label>
+                                    <select class="form-control" name="screen" id="screen" style="width: 100%;">
                                     </select>
                                 </div>
 
