- 勘定科目検索条件を動的選択肢に変更

--- a/views/accountTitles/accountTitleCategory/index.ejs
+++ b/views/accountTitles/accountTitleCategory/index.ejs
@@ -67,7 +67,7 @@ AT-07
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="name">$name$</td>
+                                    <td name="name|slice">$name$</td>
                                 </tr>
                             </tbody>
                         </table>
