- 施設編集にhasEntranceGateを追加 - ルーム検索条件拡張 - 座席に名称を追加 - オファー検索条件拡張

--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -208,6 +208,23 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="form-row">
+                    <div class="form-group bmd-form-group col-md-12">
+                        <label for="" class="bmd-label-static">
+                            hasEntranceGate
+                        </label>
+                        <a class="d-block pt-1" data-toggle="collapse" href="#editHasEntranceGateJson" role="button"
+                            aria-expanded="false" aria-controls="editHasEntranceGateJson">
+                            編集する
+                        </a>
+
+                        <div class="collapse" id="editHasEntranceGateJson">
+                            <textarea class="form-control" name="hasEntranceGateStr"
+                                rows=20><%= JSON.stringify(forms.hasEntranceGate, null, '\t') %></textarea>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
