--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -82,7 +82,7 @@ MT-01
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="parentOrganizationName"">$parentOrganizationName$</td>
+                                    <td name="parentOrganizationName|slice"">$parentOrganizationName$</td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="telephone">$telephone$</td>
                                     <td name="url__url|slice">
@@ -102,7 +102,7 @@ MT-01
                                     <td
                                         name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
                                         $offers.eligibleQuantity.maxValue$ 席まで
-                                        $availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
+                                        $availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで
                                     </td>
                                     <td name="id__additionalProperty" class="">
                                         <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
