--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -56,6 +56,21 @@ SR-01
                                     </label>
                                     <input class="form-control" name="name[$regex]">
                                 </div>
+
+                                <div class="form-group bmd-form-group col-md-1">
+                                    <label for="openSeatingAllowed" class="bmd-label-static">
+                                    </label>
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="checkbox" name="openSeatingAllowed"
+                                                value="1" id="openSeatingAllowed">
+                                            自由席
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -68,8 +83,8 @@ SR-01
                             <thead class="text-primary">
                                 <tr>
                                     <th>コード</th>
-                                    <th>名称</th>
                                     <th>施設</th>
+                                    <th>名称</th>
                                     <th>アドレス</th>
                                     <th>自由席</th>
                                     <th>追加特性</th>
@@ -83,15 +98,15 @@ SR-01
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="name.ja|slice">$name.ja$</td>
                                     <td name="containedInPlace.branchCode__containedInPlace.name.ja|slice">
                                         $containedInPlace.name.ja$
                                     </td>
+                                    <td name="name.ja|slice">$name.ja$</td>
                                     <td name="address.ja|slice">
                                         $address.ja$
                                     </td>
-                                    <td name="openSeatingAllowed">
-                                        $openSeatingAllowed$<br>
+                                    <td name="openSeatingAllowedStr">
+                                        <i class="material-icons" style="font-size: 1.2em;">$openSeatingAllowedStr$</i>
                                     </td>
                                     <td name="branchCode__id" class="">
                                         <a href="javascript:void(0)" class="showAdditionalProperty"
