- 「枝番号」表記を「コード」に統一

--- a/views/places/screeningRoomSection/form.ejs
+++ b/views/places/screeningRoomSection/form.ejs
@@ -87,7 +87,7 @@
 
                     <div class="form-group bmd-form-group col-md-3">
                         <label class="bmd-label-static">
-                            枝番号
+                            コード
                         </label>
                         <% if (isNew) { %>
                         <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
