--- a/views/sellers/_dataTables.ejs
+++ b/views/sellers/_dataTables.ejs
@@ -24,7 +24,7 @@
                     <thead class="text-primary">
                         <tr>
                             <th>ID</th>
-                            <th>枝番号</th>
+                            <th>コード</th>
                             <th>名称</th>
                             <th>Tel</th>
                             <th>URL</th>
