--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -33,7 +33,7 @@
                 <div class="form-row">
                     <div class="form-group bmd-form-group col-md-3">
                         <label for="branchCode" class="bmd-label-static">
-                            枝番号<span class="text-danger">＊</span>
+                            コード<span class="text-danger">＊</span>
                         </label>
                         <% if (isNew) { %>
                         <input type="text" class="form-control" name="branchCode" id="branchCode" placeholder=""
