--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -107,6 +107,15 @@
                                 style="width: 100%;">
                             </select>
                         </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="accountTitle[codeValue]" class="bmd-label-static">
+                                細目
+                            </label>
+                            <select class="form-control" name="accountTitle[codeValue]" id="accountTitle[codeValue]"
+                                style="width: 100%;">
+                            </select>
+                        </div>
                     </div>
                 </form>
             </div>
