--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -355,13 +355,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
-                                                    <select class="form-control" name="ticketTypeGroup">
-                                                        <option value="" disabled selected>カタログ選択</option>
-                                                        <% for (ticketType of ticketGroups) { %>
-                                                        <option value="<%= ticketType.id %>">
-                                                            <%= ticketType.name.ja %>
-                                                        </option>
-                                                        <% } %>
+                                                    <select class="form-control" name="hasOfferCatalog"
+                                                        style="width: 100%;">
                                                     </select>
                                                 </div>
                                                 <div class="form-group bmd-form-group col-md-2 mt-0 pb-0 mvtk">
@@ -406,13 +401,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
-                                                    <select class="form-control" name="ticketTypeGroup">
-                                                        <option value="" disabled selected>カタログ選択</option>
-                                                        <% for (ticketType of ticketGroups) { %>
-                                                        <option value="<%= ticketType.id %>">
-                                                            <%= ticketType.name.ja %>
-                                                        </option>
-                                                        <% } %>
+                                                    <select class="form-control" name="hasOfferCatalog"
+                                                        style="width: 100%;">
                                                     </select>
                                                 </div>
                                             </div>
